# Patchouli

./: pyproject.toml
almanac/: __init__.py
basic_plugins/: nickname.py  scripts.py  update_info.py
basic_plugins/admin_bot_manage/: admin_config.py  custom_welcome_message.py  switch_rule.py  timing_task.py  update_group_member_info.py
basic_plugins/admin_help/: __init__.py  data_source.py
basic_plugins/apscheduler/: __init__.py
basic_plugins/ban/: __init__.py
basic_plugins/broadcast/: __init__.py
basic_plugins/group_handle/: __init__.py
basic_plugins/help/: __init__.py  _data_source.py  _utils.py
basic_plugins/hooks/: __init__.py  auth_hook.py  ban_hook.py  chkdsk_hook.py  withdraw_message_hook.py
basic_plugins/init_plugin_config/: init_none_plugin_count_manager.py  init_plugins_config.py  init_plugins_data.py  init_plugins_limit.py  init_plugins_settings.py
basic_plugins/invite_manager/: __init__.py
basic_plugins/plugin_shop/: __init__.py  data_source.py
basic_plugins/super_cmd/: bot_friend_group.py  clear_data.py  manager_group.py  reload_setting.py  set_admin_permissions.py  update_friend_group_info.py
basic_plugins/super_help/: __init__.py
bilibili_sub/: __init__.py  data_source.py  model.py
extensive_plugin/guess_riddle/: __init__.py  utils.py
plugins/: about.py  fudu.py  mute.py  parse_bilibili_json.py  update_picture.py
plugins/aconfig/: __init__.py
plugins/ai/: __init__.py  utils.py
plugins/bilibili_sub/: __init__.py  utils.py
plugins/black_word/: __init__.py
services/: db_context.py
utils/: browser.py
(+47 files in other folders)
