[tool.poetry]
name = "zhenxun_bot"
version = "0.1.1"
description = "基于 Nonebot2 和 go-cqhttp 开发，以 postgresql 作为数据库，非常可爱的绪山帕秋莉bot"
authors = ["HibiKier <775757368@qq.com>"]
license = "AGPL"

[[tool.poetry.source]]
name = "ali"
default = true
url = "https://mirrors.aliyun.com/pypi/simple/"

[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = "^2.0.0rc1"
aiofiles = "^0.8.0"
aiohttp = "3.7.4.post0"
beautifulsoup4 = "4.9.3"
feedparser = "^6.0.8"
ImageHash = "^4.2.1"
jieba = "^0.42.1"
opencv-python = "^4.5.5"
playwright = "^1.18.2"
psutil = "^5.9.0"
PyYAML = "5.4.1"
retrying = "^1.3.3"
ujson = "^5.1.0"
"ruamel.yaml" = "^0.17.21"
matplotlib = "^3.5.1"
black = "^22.1.0"
pypinyin = "^0.46.0"
dateparser = "^1.1.0"
cn2an = "^0.5.16"
python-jose = "^3.3.0"
bilireq = "^0.2.6"
wordcloud = "^1.8.1"
rich = "13.0.0"
nonebot-adapter-onebot = "^2.1.5"
nonebot-plugin-apscheduler = "0.3.0"
nonebot-plugin-htmlrender = "^0.2.0"
cachetools = "^5.2.0"
tortoise-orm = {extras = ["asyncpg"], version = "^0.19.3"}
cattrs = "^22.2.0"
starlette = "^0.26.1"
qrcode = "^7.4.2"
websocket-client = "1.6.1"
nonebot-plugin-memes-api = "^0.2.0"
nonebot-plugin-handle = "^0.3.6"
imageio = "2.12.0"
nonebot-plugin-imageutils = "^0.1.17"
python-multipart = "0.0.6"
lxml = "4.9.2"
nonebot-plugin-bilichat = {extras = ["all"], version = "^5.1.3"}
pillow = "9.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
